# rfid-tracker-server

./: .envrc  .gitignore  CHANGELOG.md  Doxyfile  Justfile  README.md  cliff.toml  cog.toml  compose.yaml  devenv.nix  flake.nix  renovate.json  ruff.toml  todo.md
.crow/: release.yaml  (+3 more)
door_tracker/: .dockerignore  CHANGELOG.md  Dockerfile  Procfile  compose.yaml  project.toml  pyproject.toml  run.sh  test_gdrive_upload.py
door_tracker/door_tracker/: admin.py  apps.py  backup_scheduler.py  settings.py  urls.py
door_tracker/door_tracker/management/commands/: backup_website.py  clear_statistics.py  init_admin.py  migrate-webui-to-midas.py  update_statistics.py
door_tracker/midas/: admin.py  api.py  datetime_util.py  forms.py  models.py  statistics.py  tests.py  urls.py  views.py
door_tracker/midas/migrations/: 0001_initial.py  0002_remove_session_checkin_remove_session_checkout_and_more.py  0003_rename_owner_session_user_assignment_subteams_and_more.py  0004_alter_assignment_user_alter_checkin_tag_and_more.py  0005_alter_quota_name.py  0006_alter_assignment_quota_alter_pendingtag_scanner.py
door_tracker/midas/templatetags/: modal.py
door_tracker/templates/admin/: base_site.html  index.html
door_tracker/webui/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
door_tracker/webui/migrations/: 0013_alter_tag_tag.py  0014_alter_statistics_date.py  0015_alter_scanner_id.py  0016_alter_membership_starting_from.py  0016_alter_statistics_options.py  0016_alter_tag_unique_together.py  0017_alter_membership_starting_from.py  0017_merge_20250925_1314.py  0018_merge_20250925_1633.py  0019_alter_log_scanner_alter_log_tag_alter_membership_job_and_more.py
door_tracker/webui/templatetags/: modal.py
(+28 files in other folders)
