[project]
name = "roboteam-door-tracker"
version = "2.7.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "daphne>=4.2.1",
  "django>=5.2.5",
  "django-apscheduler>=0.7.0",
  "django-dbbackup>=5.0.0",
  "django-organizations>=2.5.0",
  "djangorestframework>=3.16.1",
  "dj-database-url>=3.0.1",
  "google-api-python-client>=2.183.0",
  "google-auth>=2.41.0",
  "pytz>=2025.2",
  "whitenoise[brotli]>=6.9.0",
  "drf-spectacular[sidecar]>=0.28.0",
]

[dependency-groups]
dev = ["python-lsp-server[all]>=1.13.1"]

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"midas.static.midas" = ["*"]
"midas.templates.midas" = ["*"]
"templates.admin" = ["*"]
"webui.static.webui" = ["*"]
"webui.templates.webui" = ["*"]
